--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
 
     <section id="bicycle" class="wrapper">
-      <h2 class="section-title">Fresh & BloodFresh & Blood</h2>
+      <h2 class="section-title">Fresh & Blood</h2>
       <ul>
         <li>
           <img src="img/Pharoah-Sanders.jpg" alt="テキストテキストテキスト">
